<resources>
    <string name="app_name">PetDex</string>

    <!-- Авторизация-->
    <string name="sign_in">Войти</string>
    <string name="sign_up">Создать аккаунт</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="create">Создать</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="reset_password_dialog_title">Почти готово!</string>
    <string name="reset_password_dialog_text">На ваш почтовый ящик отправлена инструкция по восстановлению пароля</string>
    <string name="cancel">Закрыть</string>
    <string name="sign_in_error">Неверная почта или пароль</string>
    <string name="sign_up_error">Ошибка создания аккаунта</string>
    <string name="field_empty_error">Поле не может быть пустым</string>
    <string name="email_invalid_error">Неверный формат адреса почты</string>
    <string name="password_matching_error">Пароли не совпадают</string>

</resources>