<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">
    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.petdex.auth.authstart.AuthFragment"
        android:label="AuthFragment"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_authFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.petdex.auth.signup.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.petdex.auth.signin.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in"
        >
        <action
            android:id="@+id/action_signInFragment_to_resetPasswordFragment"
            app:destination="@id/resetPasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.example.petdex.auth.resetpassword.ResetPasswordFragment"
        android:label="@string/reset_password"
        tools:layout="@layout/fragment_reset_password"
        />
</navigation>